@@ -1,4 +1,5 @@
 0.8.8
+- Improved support for "ALV-7004" files.
 - If you install the GUI with pip, you now need to include
   the `GUI` requirement: `pip install pycorrfit[GUI]`.
   The GUI depends on matplotlib and wxPython which is not
@@ -10,6 +11,7 @@
    - MacOS X build system hosted by travis-ci.org
    - New builds use wxPython3 (#85)
    - Unicode support without `reload(sys)`
+   - Error messages are more verbose
 0.8.7
 - Removed unused fitting parameter d_eva from model 6022 and
   secured backwards compatibility.
